# Exchange-2.0

./: .config  .coverage  .coveragerc  .gitignore  PRECISION_ANALYSIS.md  README.md  app.py  mc_debug.py  mc_fast.py  montecarlo_test.py  pyproject.toml  repo_info.json  simulazioni.py  worklog.md
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
ci_logs/: 0_Test (Python 3.11).txt  1_Test (Python 3.12).txt
ci_logs/Test (Python 3.11)/: 15_Complete job.txt  (+7 more)
ci_logs2/: 0_Test (Python 3.11).txt  1_Test (Python 3.12).txt
ci_logs3/: 0_Test (Python 3.12).txt  1_Test (Python 3.11).txt
ci_logs4/: 0_Test (Python 3.11).txt  1_Test (Python 3.12).txt
ci_logs_final/: 0_Test (Python 3.11).txt  1_Test (Python 3.12).txt
ci_logs_fix/: 0_Test (Python 3.12).txt  1_Test (Python 3.11).txt
ci_logs_latest/: 0_Test (Python 3.12).txt  1_Test (Python 3.11).txt
ci_logs_new/: 0_Test (Python 3.11).txt  1_Test (Python 3.12).txt
data/: predictions.json  team_city_map.json
download/: analisi_software_exchange.md  nowgoal_h2h_raw.txt  nowgoal_page.json  quadro_automazione_exchange.py
pages/: 1_Scanner.py  2_🔍_Ricerca_Partita.py
scripts/: backfill_quote_quality.py  prediction_report.py  run_nowgoal_e2e.py  scan_nowgoal_page.py
src/: __init__.py  config.py  engine.py  logging_config.py  ocr.py  pipeline.py  prematch_app_bridge.py  research.py  session_storage.py  signals.py  types.py  weather.py
tests/: __init__.py  test_ai_adjustments.py  test_calibration.py  test_calibration_eu_over.py  test_consensus_agreement.py  test_correct_score_history.py  test_deep_report.py  test_end_to_end_prematch_flow.py  test_engine.py  test_engine_regressions.py  test_ensemble_eu_ou.py  test_ht_prematch_probs.py  test_htft_marginal_fallback.py  test_kelly.py  test_line_sanity.py  test_live_recalibration.py  test_logging_config.py  test_markets.py  test_model_phase2_core.py  test_ocr.py  test_ocr_snapshots.py  test_pipeline_tracking.py  test_poisson.py  test_precision_improvements.py  test_prematch_app_bridge.py  test_prematch_diagnostics.py  test_prematch_history_calibration.py  test_session_storage.py  test_signals.py  test_signals_firewall.py  test_simulation.py  test_time_decay.py  test_utils_anomaly.py
(+178 files in other folders)
