[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "radar-pro-live"
version = "2.0.0"
description = "Motore probabilistico live per il calcio — bivariate Poisson + Dixon-Coles + Kelly"
requires-python = ">=3.11"
dependencies = [
    "streamlit>=1.35.0",
    "openai>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.10",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.ruff.lint.per-file-ignores]
"src/models/markov.py" = ["I001"]
"src/ocr.py" = ["B007", "B905", "E741", "W293", "SIM102", "SIM103", "F841"]
"src/weather.py" = ["F601", "W293", "SIM102"]
"src/tracking/stats.py" = ["B905"]
"src/ui/inputs.py" = ["I001", "F841"]
"src/ui/outputs.py" = ["SIM108"]
"tests/test_signals.py" = ["I001"]
"simulazioni.py" = ["ALL"]  # File di test esterno, non parte del package

[tool.coverage.run]
source = ["src"]
omit = ["src/ui/*", "src/utils/*"]

[tool.coverage.report]
show_missing = true
fail_under = 65
